--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ Thumbs.db
 
 stepik-boomstream/*
 stepik-boomstream/
+stepik-boomstream-v2/backup/
+voting_app2/
+stepik-boomstream-v2/utils/my_user_session.session
