добавлена работа с вопросами

--- a/stepik-boomstream-v2/stepik/.env
+++ b/stepik-boomstream-v2/stepik/.env
@@ -1,4 +1,5 @@
-BOT_TOKEN=8570792426:AAHlF4WaDjh-0NyqBsmngFCVM9QQazkVudY
+TELEGRAM_BOT_TOKEN=8570792426:AAHlF4WaDjh-0NyqBsmngFCVM9QQazkVudY
+TELEGRAM_CHAT_ID=-1003320447395
 OPENAI_KEY=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
 ALLOWED_USERS=515608099,123456789,987654321
 TELEGRAM_API_ID=39533900
