--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ stepik-boomstream-v2/utils/my_user_session.session
 voting_app/
 keys/
 stepik-boomstream-v2/venv/
+stepik-boomstream-v2/anon.session
