--- a/stepik-boomstream-v2/.env
+++ b/stepik-boomstream-v2/.env
@@ -23,6 +23,6 @@ BOT_TOKEN=8548823518:AAGKIvhJS9CExkr8c9kU01hJvda_cGEUzOU
 TELEGRAM_CHAT_ID=-1003320447395
 BOT_USERNAME=sdt_dev_bot
 APP_DOMAIN=https://vapid-agnus-unconversational.ngrok-free.dev/
-DATABASE_URL=postgresql://voting_db_s1g6_user:dQToUryaM4vLjFWCHahYsh83XFWqVhvG@dpg-d4riitvdiees73cvam4g-a.frankfurt-postgres.render.com/sdt_prod 
-#DATABASE_URL=postgresql://voting_db_s1g6_user:dQToUryaM4vLjFWCHahYsh83XFWqVhvG@dpg-d4riitvdiees73cvam4g-a.frankfurt-postgres.render.com/sdt_dev 
+#DATABASE_URL=postgresql://voting_db_s1g6_user:dQToUryaM4vLjFWCHahYsh83XFWqVhvG@dpg-d4riitvdiees73cvam4g-a.frankfurt-postgres.render.com/sdt_prod 
+DATABASE_URL=postgresql://voting_db_s1g6_user:dQToUryaM4vLjFWCHahYsh83XFWqVhvG@dpg-d4riitvdiees73cvam4g-a.frankfurt-postgres.render.com/sdt_dev 
 OPENAI_API_KEY=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
