--- a/stepik-boomstream-v2/.env
+++ b/stepik-boomstream-v2/.env
@@ -23,6 +23,7 @@ BOT_TOKEN=8548823518:AAGKIvhJS9CExkr8c9kU01hJvda_cGEUzOU
 TELEGRAM_CHAT_ID=-1003320447395
 TELEGRAM_THREAD_ID=42
 TELEGRAM_BOT_USERNAME=sdt_dev_bot
+TELEGRAM_ENABLE_FORUM_MESSAGE_TRACKING=1
 APP_DOMAIN=https://vapid-agnus-unconversational.ngrok-free.dev/
 #DATABASE_URL=postgresql://voting_db_s1g6_user:dQToUryaM4vLjFWCHahYsh83XFWqVhvG@dpg-d4riitvdiees73cvam4g-a.frankfurt-postgres.render.com/sdt_prod 
 DATABASE_URL=postgresql://voting_db_s1g6_user:dQToUryaM4vLjFWCHahYsh83XFWqVhvG@dpg-d4riitvdiees73cvam4g-a.frankfurt-postgres.render.com/sdt_dev 
